Fix SMB remount on reboot with hostname

This change fixes a bug where shares mounted with a hostname rather than
an ip address are not remounted when a user logs out and back in.

Previously, we were storing the unresolved share_path rather than the
resolved share path that is used to mount the share.

Bug: 863513, 757625
Change-Id: I183200d9193c439f46a1609074706c5b2e2c0355
Reviewed-on: https://chromium-review.googlesource.com/1136863
Reviewed-by: Zentaro Kavanagh <zentaro@chromium.org>
Commit-Queue: Zentaro Kavanagh <zentaro@chromium.org>
Cr-Commit-Position: refs/heads/master@{#575753}
Former-commit-id: 0564a5eed2fa1ea436fbfaee10fdfacec8aef057